--- a/views/users/details_new.handlebars
+++ b/views/users/details_new.handlebars
@@ -1,5 +1,8 @@
-<h2 id="header-details-form">Fill out the form below to get started!</h2>
 
+
+<h2 id="header-details-form">WE NEED A FEW MORE DETAILS TO GET STARTED!</h2>
+
+<h3> You are not signed in  </h3>
 
 <form class="details-new-form" action="/users/details_new" method="post" autocomplete="on">
   <br>
@@ -15,7 +18,7 @@
   </div>
 
   <label for="sexDetails">Sex</label>
-  <select class="form-control">
+  <select class="form-control" name="sexselectpicker">
     <option value="male" required name="male">Male</option>
     <option value="female" required name="female">Female</option>
   </select>
