--- a/views/users/sign_up.handlebars
+++ b/views/users/sign_up.handlebars
@@ -6,32 +6,32 @@
 
     <h3> Sign Up, it's free</h3>
 
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label for="uname">Username: </label>
         <input type="text" id="uname" name="username" required="true" class="form-control" placeholder="Enter Username" autofocus>
-      </div>
+      </div> -->
       
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label for="u-age">Age: </label>
         <input type="number" id="u-age" name="userage" required="true" class="form-control" placeholder="Enter Age" autofocus>
-      </div>
+      </div> -->
 
-      <div id='email' class="form-group">
+      <div id='emailform' class="form-group">
         <label for="em">Email: </label>
         <input type="email" id="e-mail" name="email" class="form-control" placeholder="Enter Email" required >
       </div>
           
       <div class="form-group">
         <label for="pass">Password: </label>
-        <input title="Password must contain at least 6 characters, including UPPER/lowercase and numbers" type="password" id="pass" name="password" class="form-control" placeholder='Enter Password' required="true" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}" onchange="form.confirmPassword.pattern = this.value;">
+        <input title="Password must contain at least 6 characters, including UPPER/lowercase and numbers" type="password" id="pass" name="password" class="form-control" placeholder='Enter Password' required="true" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}">
       </div>
 
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label for="pass">Password Confirmation: </label>
         <input title="Please enter the same Password as above" type="password" id="confirmPass" name="confirmPassword" class="form-control" placeholder='Re-enter Password' required="true" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}">
-      </div>
+      </div> -->
 
-     
+   
       <button type="submit" class="btn btn-default">Sign Up!</button> 
       <br> 
       <p> By registering you are agreeing to our <a target="_blank" href="#">Privacy Policy</a> and <a target="_blank" href="#">Terms and Conditions.</a> </p>
