--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,16 @@
+/*results circle shape*/
+.circle-shape-results {
+    width: 100%;
+    height: 300px;
+    /*background: white;*/
+    border-radius: 20%;
+    padding: 25.5px;
+    margin-top: 75px;
+    border-style: solid;
+    border-width: 4px;
+    border-color: #005470;
+}
+/*results circle shape*/
 .myButton {
    
     border-radius:5px;
@@ -51,7 +64,7 @@
 
 /*react #app div*/
 #app {
-    margin-top: 225px;
+    margin-top: 170px;
 }
 
 /*all_trails page begins*/
