--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,14 +1,56 @@
 <!-- Navigation -->
-<div class="jumbotron">
-   <h1></h1>
- </div>
+
+<div class="jumbotron-main">
+    <span>
+        
+        <h1 class="main-h1"> CONNECTING YOU TO LIFE CHANGING TREATMENTS 
+            <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn" style="width: 200px; height: 60px; padding: 18px">Register Now</a>
+        </h1> 
+        
+    </span>
+</div>
+<div class="row" id="main-row-sect">
+    <div class="container-lg">
+        <span class="img-spans-main"> 
+        <img class="img-responsive center-block" src="https://cdn3.iconfinder.com/data/icons/medical-2-1/512/scientist-512.png">   
+        </span>
+        <span class="img-spans-main"> 
+        <img class="img-responsive center-block" src="https://cdn3.iconfinder.com/data/icons/cosmo-color-medicine/40/microscope_1-512.png">   
+        </span>
+        <span class="img-spans-main"> 
+        <img class="img-responsive center-block" src="https://cdn2.iconfinder.com/data/icons/laboratory/100/BEAKER_BOIL-512.png">   
+        </span>
+        <span class="img-spans-main"> 
+        <img class="img-responsive center-block" src="http://artistsvalley.com/images/icons/Medical%20Healthcare%20Icons/DNA%20Genetics/256x256/DNA%20Genetics.jpg">   
+        </span>
+        <span class="img-spans-main"> 
+        <img class="img-responsive center-block" src="https://cdn3.iconfinder.com/data/icons/photography/512/Icon_21-512.png">   
+        </span>
+        <span class="img-spans-main"> 
+        <img class="img-responsive center-block" src="http://louisvillebodyworks.com/wp-content/uploads/2015/02/BodyWorksLogo-stacked-e1428633927158.png">   
+        </span>
+        <span class="img-spans-main"> 
+        <img class="img-responsive center-block" src="https://cdn0.iconfinder.com/data/icons/activities-glyph/2048/2131_-_Doctor-512.png">   
+        </span>
+    <div>
+<div>
 <!-- Intro Section -->
-<section id="intro" class="intro-section">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-           
-            <h1> CONNECTING YOU TO LIFE CHANGING TREATMENTS </h1> <br>
+        <section id="intro" class="intro-section">
+                <header class="what-is-header">
+                <h2 class="what-is-h2">What is Cesarcells.com?</h2>
+                </header>
+                <p>
+                Cesarcells.com helps you find cutting edge clinical trials. 
+
+                 It is an independent resource on Stargardts disease as well as other Age Related Macular Degeneration (ARMD) eye diseases. 
+
+               We are not affiliated in any way with any medical company and we have a team of health professionals analyzing the full body of research.
+                </p> <br>
+                <p class="what-is-sci"><strong>We currently have over 8 ARMD clinical trials and references to scientific research.</strong></p>
+                <a class="btn btn-primary btn-lg" href="#" role="button">Learn More About Us</a>
             
             </div>
         </div>
@@ -17,21 +59,61 @@
     </div>
 </section>
 
-<!-- About Section -->
-<A name="about-main"></A>
-<section id="about" class="about-section">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1>About Section</h1>
+<!-- How it works Section -->
+<A name="how-it-work-main"></A>
+<section id="dod-how-it-works">
+            <div class="container">
+                <div class="row">
+                        <div id="dod-how-it-works_left" class="col-md-6 col-sm-7">
+                            <div class="col-xs-12">
+                                <div class="col-sm-4">
+                                    <div class="how-it-works-svg"></div>
+                                </div>
+                                <div class="col-sm-8">
+                                    <h2>How It Works</h2>
+                                    <p>Live video doctor visits including assessment, diagnosis and prescriptions when necessary. </p>
+                                    <p><img src=""></span></a></p>
+                                </div>
+                            </div>
+                            <div class="col-xs-12">
+                                <div class="col-sm-4">
+                                    <div class="what-we-treat-svg"></div>
+                                </div>
+                                <div class="col-sm-8">
+                                    <h2>What We Treat</h2>
+                                    <p>Head to toe, mind and body.</p>
+                                    <p>See top conditions we treat.</p>
+                                    <p><a href="/medical">Medical <span class="caret-right"></span></a></p>
+                                    <p><a href="/psychology">Mental Health <span class="caret-right"></span></a></p>
+                                </div>
+                            </div>
+                            <div class="col-xs-12">
+                                <div class="col-sm-4">
+                                    <div class="what-it-costs-svg"></div>
+                                </div>
+                                <div class="col-sm-8">
+                                    <h2>What It Costs</h2>
+                                    <p>Similar to a typical copay and much less than the usual cost of urgent care.<br>Plus, you may be covered by your health plan.</p>
+                                    <p><a data-toggle="modal" data-target="#HowItWorksPrice" href="#HowItWorksPrice">Learn more <span class="caret-right"></span></a></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-sm-5">
+                            <div class="img-container">
+
+                                  <img id="dash_image" src="">
+                            </div>
+                        </div>
+                </div>
+                <div class="clear-fix"></div>
             </div>
-        </div>
-    </div>
-</section>
+        </section>
+
+
 
 <!-- Tools Section -->
 <A name="tools-main"></A>
-<section id="tools-main" class="services-section">
+<section id="tools-main" class="intro-section">
     <div class="container" id="tools-main">
         <div class="row">
             <div class="col-lg-12">
@@ -43,7 +125,7 @@
 
 <!-- Treatments Section -->
 <A name="treatments-main"></A>
-<section id="services" class="services-section">
+<section id="services" class="intro-section">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -53,14 +135,4 @@
     </div>
 </section>
 
-<!-- Contact Section -->
-<A name="contact-main"></A>
-<section id="contact" class="contact-section">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1>Contact Section</h1>
-            </div>
-        </div>
-    </div>
-</section>
+
