--- a/views/partials/main-nav.handlebars
+++ b/views/partials/main-nav.handlebars
@@ -20,20 +20,18 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Resources & Support <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="dLabel">
-                <li><a href="#">What is Stargardts?</a></li>
-                <li><a href="#">What to expect during a clinical trial?</a></li>
-                <li><a href="#">Glossary</a></li>
+                <li><a href="/whats-stargardts-disease">What is Stargardts?</a></li>
+                <li><a href="/stargardts-clinical-trials">What to expect during a clinical trial?</a></li>
+                <li><a href="/stargardts-glossary">Glossary</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">Assistive technology vendors & tools</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Inspiring story of Cesar</a></li>
+                <li><a href="/stargardts-stemcell-story">Inspiring story of Cesar</a></li>
               </ul>
             </li>
             <li class="dropdown">
-              <A href="/#tools-main" class="navbar-link" role="button">Tools</A>
+             <A href="/#how-it-work-main" class="navbar-link" role="button">About</A>
             </li>
             <li class="dropdown">
-             <A href="/#about-main" class="navbar-link" role="button">About</A>
+              <A href="/#tools-main" class="navbar-link" role="button">Tools</A>
             </li>
             <li class="dropdown">
               <A href="/#treatments-main" class="navbar-link" role="button">Treatments</A>
