--- a/views/partials/main-nav.handlebars
+++ b/views/partials/main-nav.handlebars
@@ -28,7 +28,7 @@
               </ul>
             </li>
             <li class="dropdown">
-             <A href="/#how-it-work-main" class="navbar-link" role="button">About</A>
+             <A href="/#how-it-work-main" class="navbar-link" role="button">How it works</A>
             </li>
             <li class="dropdown">
               <A href="/#tools-main" class="navbar-link" role="button">Tools</A>
