--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,8 +4,10 @@
     <span>
         
         <h1 class="main-h1"> CONNECTING YOU TO LIFE CHANGING TREATMENTS 
-            <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn" style="width: 200px; height: 60px; padding: 18px">Register Now</a>
+        <p class="what-is-sci"><strong>Qualify For Age Related Macular Degeneration clinical trials!</strong></p>
+            <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn" style="width: 200px; height: 60px; padding: 18px">SEE IF YOU QUALIFY</a>
         </h1> 
+        
         
     </span>
 </div>
@@ -34,7 +36,6 @@
         </span>
     <div>
 <div>
-<!-- Intro Section -->
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -54,85 +55,62 @@
             
             </div>
         </div>
-        
-        
     </div>
 </section>
 
 <!-- How it works Section -->
 <A name="how-it-work-main"></A>
-<section id="dod-how-it-works">
-            <div class="container">
-                <div class="row">
-                        <div id="dod-how-it-works_left" class="col-md-6 col-sm-7">
-                            <div class="col-xs-12">
-                                <div class="col-sm-4">
-                                    <div class="how-it-works-svg"></div>
-                                </div>
-                                <div class="col-sm-8">
-                                    <h2>How It Works</h2>
-                                    <p>Live video doctor visits including assessment, diagnosis and prescriptions when necessary. </p>
-                                    <p><img src=""></span></a></p>
-                                </div>
-                            </div>
-                            <div class="col-xs-12">
-                                <div class="col-sm-4">
-                                    <div class="what-we-treat-svg"></div>
-                                </div>
-                                <div class="col-sm-8">
-                                    <h2>What We Treat</h2>
-                                    <p>Head to toe, mind and body.</p>
-                                    <p>See top conditions we treat.</p>
-                                    <p><a href="/medical">Medical <span class="caret-right"></span></a></p>
-                                    <p><a href="/psychology">Mental Health <span class="caret-right"></span></a></p>
-                                </div>
-                            </div>
-                            <div class="col-xs-12">
-                                <div class="col-sm-4">
-                                    <div class="what-it-costs-svg"></div>
-                                </div>
-                                <div class="col-sm-8">
-                                    <h2>What It Costs</h2>
-                                    <p>Similar to a typical copay and much less than the usual cost of urgent care.<br>Plus, you may be covered by your health plan.</p>
-                                    <p><a data-toggle="modal" data-target="#HowItWorksPrice" href="#HowItWorksPrice">Learn more <span class="caret-right"></span></a></p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-sm-5">
-                            <div class="img-container">
-
-                                  <img id="dash_image" src="">
-                            </div>
-                        </div>
-                </div>
-                <div class="clear-fix"></div>
-            </div>
-        </section>
-
+<div class="row">
+  <div class="col-lg-12">
+    <section id="intro" class="intro-section">
+      <header class="what-is-header">
+        <h2 class="what-is-h2">How It Works</h2>
+      </header>
+       <div class="col-md-4">.col-md-4</div>
+         <div class="col-md-4">.col-md-4</div>
+         <div class="col-md-4">.col-md-4</div>
+    </section>
+  </div>
+</div>
 
 
 <!-- Tools Section -->
 <A name="tools-main"></A>
-<section id="tools-main" class="intro-section">
-    <div class="container" id="tools-main">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1>Tools Section</h1>
-            </div>
-        </div>
-    </div>
+div class="row">
+  <div class="col-lg-12">
+    <section id="intro" class="intro-section">
+      <header class="what-is-header">
+        <h2 class="what-is-h2">Tools</h2>
+      </header>
+       <div class="col-md-4">.col-md-4</div>
+         <div class="col-md-4">.col-md-4</div>
+         <div class="col-md-4">.col-md-4</div>
+    </section>
+  </div>
+</div>
 </section>
 
 <!-- Treatments Section -->
 <A name="treatments-main"></A>
-<section id="services" class="intro-section">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1>Treatments Section</h1>
-            </div>
-        </div>
-    </div>
+<div class="row">
+  <div class="col-lg-12">
+    <section id="intro" class="intro-section">
+      <header class="what-is-header">
+        <h2 class="what-is-h2">What is Stargardt Disease?</h2>
+      </header>
+        <p>
+          Stargardt disease is the most common form of inherited juvenile macular degeneration. The progressive vision loss associated with Stargardt disease is caused by the death of photoreceptor cells in the central portion of the retina called the macula.
+          The retina is the delicate light-sensing tissue lining the back inside wall of the eye. 
+        </p><br>
+        <p>
+          Photoreceptor cells in the retina provide vision by conveying information from the visual field to the brain. The macula is responsible for sharp central vision — for tasks like reading, watching television, and looking at faces.
+          Decreased central vision is a hallmark of Stargardt disease. Side vision is usually preserved. Stargardt disease typically develops during childhood and adolescence. Also involved in Stargardt disease is a region beneath the macula called the retinal pigment epithelium.
+        </p> <br>
+        <p class="what-is-sci"><strong>Register to find a trial right for you. It's completely free!</strong></p>
+          <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn" style="width: 200px; height: 60px; padding: 18px">Register Now</a>
+    </section>
+  </div>
+</div>
 </section>
 
 
