--- a/views/users/sign_in.handlebars
+++ b/views/users/sign_in.handlebars
@@ -1,31 +1,49 @@
-<form id="sign-in-form" class="form-horizontal" action="/users/dashboard" method="POST">
-  <div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-    <div class="col-sm-10">
-      <input type="email" class="form-control" id="inputEmail" name="email" placeholder="Email">
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-    <div class="col-sm-10">
-      <input type="password" class="form-control" id="inputPass" name="password" placeholder="Password">
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <div class="checkbox">
-        <label>
-          <input type="checkbox"> Remember me
-        </label>
+<div class="row">
+  <div class="col-md-6">
+
+  <form id="sign-in-form" class="form-horizontal" action="/users/dashboard" method="POST">
+    <div class="form-group">
+      <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+      <div class="col-sm-10">
+        <input type="email" class="form-control" id="inputEmail" name="email" placeholder="Email">
       </div>
     </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Sign in</button>
+    <div class="form-group">
+      <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+      <div class="col-sm-10">
+        <input type="password" class="form-control" id="inputPass" name="password" placeholder="Password">
+      </div>
     </div>
-  </div>
-  <a href="/users/password_new">Forgot your password?</a><br>
-  <a href="/users/sign_up">Don't have an account? <i>SIGN UP</i></a>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <div class="checkbox">
+          <label>
+            <input type="checkbox"> Remember me
+          </label>
+        </div>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <button type="submit" class="btn btn-default">Sign in</button><br>
+    <a href="/users/password_new">Forgot your password?</a><br>
+    <a href="/users/sign_up">Don't have an account? <i>SIGN UP</i></a>
+      </div>
+    </div>
+  </form>
 
-</form>
+  </div>
+  <div class="col-md-6" id="why-register">
+
+  <h1>With your <strong>free</strong> CesarCells account you can:</h1><br>
+      <ul class="list-group">
+        <li class="list-group-item"><span class="glyphicon glyphicon-check" aria-hidden="true"></span>          Match with clinical trials you qualify for</li><br>
+        <li class="list-group-item"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>          Find treatments based on your genetics</li><br>
+        <li class="list-group-item"><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span>          Have your 23AndMe genetic data analyzed for ARMD mutations</li><br>
+        <li class="list-group-item"><span class="glyphicon glyphicon-blackboard" aria-hidden="true"></span>          Stay updated on the latest Stargardt disease research</li><br>
+        <li class="list-group-item"> <span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>          Given your own personal dashboard</li><br>
+      </ul><br>
+    
+  </div>
+</div>
+
