added post route and mongo update to user auth

--- a/views/users/details_new.handlebars
+++ b/views/users/details_new.handlebars
@@ -29,9 +29,8 @@
   Have you been diagnosed with Stargardts?<br>
   <select name="diagnosedSelect" required>
       <option value=""></option>
-      <option value="yes">Yes</option>
-      <option value="no">No</option>
-      <option value="idk">I Don't Know</option>
+      <option value="true">Yes</option>
+      <option value="false">No</option>
     </select>
     <br><br>
     
