--- a/views/users/sign_up.handlebars
+++ b/views/users/sign_up.handlebars
@@ -3,6 +3,10 @@
   <br>
   <h1>Welcome to the sign-up page!</h1>
     <form class='create-update-form' action="/users/sign_up" method="post" autocomplete="on">
+    
+    <p>Login or Register with:</p>
+
+            <a href="/auth/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a><br><br><br>
 
     <h3> Sign Up, it's free</h3>
 
