--- a/public/css/style.css
+++ b/public/css/style.css
@@ -210,11 +210,71 @@ pre {
 
 font-size: 55px;
 font-weight: 300;
+color: white;
 }
+.tool-main-h2 {
+    position: absolute; 
+    top: -100px; 
+    left: 0; 
+    width: 100%; 
+    font-size: 55px;
+    
+    color: white;
+}
+.trial-main-h2 {
+    position: absolute; 
+    top: 20px; 
+    left: 0; 
+    width: 100%; 
+    font-size: 55px;
+    
+    color: white;
+}
+.tool-main-h2-CTQ {
+    position: absolute; 
+    top: -100px; 
+    left: -65px; 
+    width: 100%; 
+    font-size: 55px;
+    margin-left: 95px;
+    color: white;
+}
+.tool-main-h2-SNP {
+    position: absolute; 
+    top: -10px; 
+    left: -65px; 
+    width: 100%; 
+    font-size: 55px;
+    margin-left: 95px;
+    color: white;
+}
+.tool-main-h2-VAFD {
+    position: absolute; 
+    top: 130px; 
+    left: -150px; 
+    width: 100%; 
+    font-size: 55px;
+    margin-left: 95px;
+    color: white;
+}
+.tools-image {
+    position: relative; 
+    width: 100%;
+}
+
+
 .what-is-header {
     margin-bottom: 10px;
 }
 #intro {
+    padding: 75px 0;
+    background: #58b8fe;
+    text-align: center;
+    margin-bottom: 200px;
+    /*border-radius: 30%;*/
+    margin-top: 20px;
+}
+#tools {
     padding: 75px 0;
     background: #e8efef;
     text-align: center;
@@ -222,9 +282,33 @@ font-weight: 300;
     /*border-radius: 30%;*/
     margin-top: 20px;
 }
-.intro-clinics {
+.tools-section {
     padding: 75px 0;
     background: white;
+    text-align: center;
+    margin-bottom: 200px;
+    /*border-radius: 30%;*/
+    margin-top: 20px;
+}
+#treatments {
+    padding: 75px 0;
+    background: #58b8fe;
+    text-align: center;
+    margin-bottom: 200px;
+    /*border-radius: 30%;*/
+    margin-top: 20px;
+}
+.treatments-section {
+    padding: 75px 0;
+    background: white;
+    text-align: center;
+    margin-bottom: 200px;
+    /*border-radius: 30%;*/
+    margin-top: 20px;
+}
+.intro-clinics {
+    padding: 75px 0;
+    background: #58b8fe;
     text-align: center;
     margin-bottom: 200px;
     /*border-radius: 30%;*/
@@ -418,7 +502,7 @@ div.container-fluid.bg-info {
     background-color: transparent;
 }
 nav.navbar.navbar-default.navbar-fixed-top {
-    background-color: #005470;
+    background-color: #58b8fe;
     /*color: white;*/ 
 }
 
@@ -465,13 +549,13 @@ strong {
   padding:10px;
   margin:3px;
 }
-h1 {
+/*h1 {
     font:normal bold 2em/1.8em;
     text-align:left;
-    /*border-bottom:1px solid #999;*/
+    border-bottom:1px solid #999;
     padding:0;
     width:auto
-}
+}*/
 h2 {
     font:italic bold 1.3em/1.2em;
     padding:0;
@@ -521,9 +605,9 @@ img.question-image {
 }
 .panel-footer {
   height: 700px;
-  background-color: #005470;
+  background-color: #58b8fe;
   margin-top:  20px;
-}
+ }
 #start-panel-head {
   text-align: center;
   /*add border*/
@@ -534,6 +618,21 @@ img.question-image {
   text-align: center;
   /*add border*/
 }
+/*rotating double helix*/ 
+.image-helix {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 120px;
+    height: 120px;
+    margin:-60px 0 0 -60px;
+    -webkit-animation:spin 4s linear infinite;
+    -moz-animation:spin 4s linear infinite;
+    animation:spin 4s linear infinite;
+}
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
 
 /*Stem Cell Assessment Begins*/
 div.col-xs-6.col-md-3 {
