--- a/views/partials/main-nav.handlebars
+++ b/views/partials/main-nav.handlebars
@@ -10,7 +10,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">CesarCells</a>
+          <a class="navbar-brand" id="cesar-logo" href="/">CesarCells</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -18,7 +18,7 @@
         <ul class="nav navbar-nav">
             
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Resources & Support <span class="caret"></span></a>
+              <a href="#" id="resources-nav-text" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Resources & Support <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="dLabel">
                 <li><a href="/whats-stargardts-disease">What is Stargardts?</a></li>
                 <li><a href="/stargardts-clinical-trials">What to expect during a clinical trial?</a></li>
@@ -28,21 +28,21 @@
               </ul>
             </li>
             <li class="dropdown">
-             <A href="/#how-it-work-main" class="navbar-link" role="button">How it works</A>
+             <A href="/#how-it-work-main" id="howitworks-nav-text" class="navbar-link" role="button">How it works</A>
             </li>
             <li class="dropdown">
-              <A href="/#tools-main" class="navbar-link" role="button">Tools</A>
+              <A href="/#tools-main" id="tools-nav-text" class="navbar-link" role="button">Tools</A>
             </li>
             <li class="dropdown">
-              <A href="/#treatments-main" class="navbar-link" role="button">Treatments</A>
+              <A href="/#treatments-main" id="treatments-nav-text" class="navbar-link" role="button">Treatments</A>
             </li>
         </ul>
         <ul class="nav navbar-nav" style="float: right">
           <li class="text-right">
-            <a href="/users/sign-in" class="navbar-link" data-toggle="" role="button" aria-haspopup="true" aria-expanded="false">LOGIN</span></a>
+            <a href="/users/sign-in" id="login-nav-text" class="navbar-link" data-toggle="" role="button" aria-haspopup="true" aria-expanded="false">LOGIN</span></a>
           </li>
           <li class="">
-            <a href="/users/sign_up">SIGNUP</a>
+            <a href="/users/sign_up" id="signup-nav-text">SIGNUP</a>
           </li>
         </ul>
     </div>
