--- a/views/users/details_new.handlebars
+++ b/views/users/details_new.handlebars
@@ -17,6 +17,11 @@
     <input type="text" name="lname" placeholder="Last name" class="form-control" >
   </div>
 
+  <div class="form-group">
+    <label for="u-age">Age: </label>
+    <input type="number" id="u-age" name="userage" required="true" class="form-control" placeholder="Enter Age" autofocus>
+  </div>
+
   <label for="sexDetails">Sex</label>
   <select class="form-control" name="sexselectpicker">
     <option value="male" required name="male">Male</option>
