--- a/views/users/sign_in.handlebars
+++ b/views/users/sign_in.handlebars
@@ -1,7 +1,9 @@
 <div class="row">
   <div class="col-md-6">
-
   <form id="sign-in-form" class="form-horizontal" action="/users/dashboard" method="POST">
+  <h2>Login or Register with:</h2>
+
+          <a href="/auth/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a><br><br><br>
     <div class="form-group">
       <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
       <div class="col-sm-10">
