--- a/views/resources/clinical_trial_descr.handlebars
+++ b/views/resources/clinical_trial_descr.handlebars
@@ -13,7 +13,7 @@
     <div class="col-lg-12">
       <section class="intro-clinics" class="">
         <header class="what-is-header">
-          <h2 class="what-is-h2">What are Clinical Trials?</h2>
+          <h2 class="what-are-trials-h2">What are Clinical Trials?</h2>
         </header>
         <p>
         Clinical trials are the final clinical research phase necessary for the Food and Drug Administration (FDA) to approve a treatment for use in humans. The clinical testing of experimental drugs is normally done in three phases, each successive phase involving a larger number of people.
@@ -25,7 +25,7 @@
     <div class="col-lg-12">
       <section class="intro-clinics" class="">
         <header class="what-is-header">
-          <h2 class="what-is-h2">PHASE 1</h2>
+          <h2 class="what-are-trials-h2">PHASE 1</h2>
         </header>
         <p>
         Phase I studies are primarily concerned with assessing the drug's safety and establishing a maximum tolerated dose for the drug. This initial phase of testing in humans is done in a very small number of volunteers. Sometimes, healthy adults without disease are tested. Other times, patients with end-stage disease are tested. <br><br> 
@@ -38,7 +38,7 @@
     <div class="col-lg-12">
       <section class="intro-clinics" class="">
         <header class="what-is-header">
-          <h2 class="what-is-h2">PHASE 2</h2>
+          <h2 class="what-are-trials-h2">PHASE 2</h2>
         </header>
         <p>
         Phase II studies are initiated once a drug is found to be safe. In a Phase II study, the effectiveness of a given drug or treatment is evaluated. The duration of a phase II study depends greatly on the nature of the treatment being tested and the specific disease. <br><br> 
@@ -51,7 +51,7 @@
     <div class="col-lg-12">
       <section class="intro-clinics" class="">
         <header class="what-is-header">
-          <h2 class="what-is-h2">PHASE 3</h2>
+          <h2 class="what-are-trials-h2">PHASE 3</h2>
         </header>
         <p>
         Phase III studies allow investigators to better gauge the effectiveness and side effects of a drug in a large population of diverse patients. The large-scale testing provides the pharmaceutical company and the FDA with a more thorough understanding of the drug's effectiveness, benefits, and range of possible adverse reactions.<br><br> 
