--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,12 +60,12 @@ pre {
     width: 100%;
     height: 300px;
     /*background: white;*/
-    border-radius: 30%;
+    /*border-radius: 30%;*/
     padding: 25.5px;
     margin-top: 75px;
     border-style: solid;
     border-width: 4px;
-    border-color: #005470;
+    border-color: #58b8fe;
 }
 /*results circle shape*/
 .myButton {
@@ -110,7 +110,7 @@ pre {
     text-shadow:0px -1px 0px #2b665e;
 }
 .myButton:hover {
-    background-color: #005470;
+    background-color: #58b8fe;
     color: white;
 }
 .myButton:active {
@@ -507,7 +507,7 @@ ul.dropdown-menu {
     background-color: #e8efef;
 }
 .panel-body {
-    border-top: #005470;
+    border-top: #58b8fe;
     border-top-style: solid;
 }
 /*dashboard home ends*/
