--- a/views/tools/all_trials.handlebars
+++ b/views/tools/all_trials.handlebars
@@ -8,7 +8,7 @@
         <div class="inner">
            <div class="icon">
                 <div class="icon-inner">
-                    <a href="/tools/start-health-assessment" target="_blank" class="website"><img src="images/icons/icon-ai.svg" class="icon"></a>
+                    <a href="/tools/start-health-assessment" class="website"><img src="images/icons/icon-ai.svg" class="icon"></a>
                 </div> 
            </div> 
            <div class="name">
