--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,8 +3,8 @@
 <div class="jumbotron-main">
     <span>
         
-        <h1 class="main-h1"> CONNECTING YOU TO LIFE CHANGING TREATMENTS 
-        <p class="what-is-sci"><strong>Qualify For Age Related Macular Degeneration clinical trials!</strong></p>
+        <h1 class="main-h1"> FIND A TRIAL 
+        <p class="what-is-sci"><strong>CONNECTING YOU TO LIFE CHANGING TREATMENTS!</strong></p>
             <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn" style="width: 200px; height: 60px; padding: 18px">SEE IF YOU QUALIFY</a>
         </h1> 
         
