--- a/views/tools/all_trials.handlebars
+++ b/views/tools/all_trials.handlebars
@@ -12,7 +12,7 @@
                 </div> 
            </div> 
            <div class="name">
-            <a href="/tools/start-health-assessment" target="_blank" class="website">Stargardts</a>
+            <a href="/tools/start-health-assessment" class="website">Stargardts</a>
             <div class="date">Tue Jul 12</div>
            </div>
         </div>
