--- a/views/users/dashboard.handlebars
+++ b/views/users/dashboard.handlebars
@@ -8,7 +8,7 @@
             <div class="col-xs-9">
                 <h2 id="h1-images">What you can do</h2>
             </div>
-            <a href="/tools/stemcell-assessment">
+            <a href="/tools/all-trials">
             <img src="/assets/images/stemcells-purple.png" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash"/>
             <h3><span>Find a Clinical Trial</span></h3>
             </a>
