--- a/views/layouts/dash.handlebars
+++ b/views/layouts/dash.handlebars
@@ -21,7 +21,7 @@
 <script src="/js/scripts/assessment_questions.js" type="text/javascript"></script>
 <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
 <!-- <script src="/data/stargardtsQuestions.js" type="text/javascript"></script> -->
-
+<script type="text/javascript"></script>
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/login-modal.js"></script>
 
@@ -30,18 +30,46 @@
 <script src="/js/scrolling-nav.js"></script>
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
 <script src="https://api.23andme.com/res/js/ttam-0.3.js"></script>
+<script src="http://code.responsivevoice.org/responsivevoice.js"></script>
 </head>
 
 
 
 <body>
+
 {{> nav}}
-        
+    
     {{{body}}}
 
  
 
     {{> footer}}
+    <script> 
+    function getSelectionText() {
+        var text = "";
+        if (window.getSelection) {
+            text = window.getSelection().toString();
+        } else if (document.selection && document.selection.type != "Control") { // for Internet Explorer 8 and below
+            text = document.selection.createRange().text;
+        }
+        return text;
+    }
+    $(document).ready(function (){
+     // when the document has completed loading
+       $(document).mouseup(function (e){ // attach the mouseup event for the document
+        responsiveVoice.cancel(); // stop anything currently being spoken
+        responsiveVoice.speak(getSelectionText()); //speak the text as returned by getSelectionText
+       })
+       $('[data-toggle="tooltip"]').tooltip()
+
+    });
+    </script>
+    <script>
+    $('a').mouseenter(function() { // Attach this function to all mouseenter events for 'a' tags 
+      responsiveVoice.cancel(); // Cancel anything else that may currently be speaking
+      responsiveVoice.speak($(this).text()); // Speak the text contents of all nodes within the current 'a' tag
+    });
+    </script>
 
 </body>
 </html>
