--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,17 +30,44 @@
 <script src="/js/scrolling-nav.js"></script>
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
 <script src="https://api.23andme.com/res/js/ttam-0.3.js"></script>
-
+<script src="http://code.responsivevoice.org/responsivevoice.js"></script>
 </head>
 
 
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+
     {{> main-nav}}
-    
-        
+   
+
     {{{body}}}
 
     {{> footer}}
+    <script> 
+    function getSelectionText() {
+        var text = "";
+        if (window.getSelection) {
+            text = window.getSelection().toString();
+        } else if (document.selection && document.selection.type != "Control") { // for Internet Explorer 8 and below
+            text = document.selection.createRange().text;
+        }
+        return text;
+    }
+    $(document).ready(function (){ // when the document has completed loading
+       $(document).mouseup(function (e){ // attach the mouseup event for the document
+        responsiveVoice.cancel(); // stop anything currently being spoken
+        responsiveVoice.speak(getSelectionText()); //speak the text as returned by getSelectionText
+       })
+
+
+    });
+    </script>
+    <script>
+    // $('a').mouseenter(function() { // Attach this function to all mouseenter events for 'a' tags 
+
+    //   responsiveVoice.cancel(); // Cancel anything else that may currently be speaking
+    //   responsiveVoice.speak($(this).text()); // Speak the text contents of all nodes within the current 'a' tag
+    // });
+    </script>
 </body>
 </html>
