--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -2,5 +2,5 @@
   <div class="panel-footer"> 
   
   </div>
-  <a target="_blank" href="#">Privacy Policy</a> and <a target="_blank" href="#">Terms and Conditions.</a> 
+  <a id="priv-policy" target="_blank" href="#">Privacy Policy</a> and <a target="_blank" href="#">Terms and Conditions.</a> 
 </div>
