--- a/views/partials/main-nav.handlebars
+++ b/views/partials/main-nav.handlebars
@@ -1,12 +1,17 @@
 <div class="container">  
 <div class="container">
+
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+
+
+
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
+            <span class="icon-bar"><i class="fa fa-audio-description" aria-hidden="true">Highlight Text To Enable Speech</i>
+</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
@@ -22,6 +27,7 @@
               <ul class="dropdown-menu" aria-labelledby="dLabel">
                 <li><a href="/whats-stargardts-disease">What is Stargardts?</a></li>
                 <li><a href="/stargardts-clinical-trials">What to expect during a clinical trial?</a></li>
+                <li><a href="/stargardts-assistive-technologies">Assistive Technologies</a></li>
                 <li><a href="/stargardts-glossary">Glossary</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="/stargardts-stemcell-story">Inspiring story of Cesar</a></li>
