--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -17,19 +17,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">            
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" id="a-dash" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-life-ring" aria-hidden="true"></i>
-Resources & Support <span class="caret"></span></a>
-              <ul class="dropdown-menu" aria-labelledby="dLabel">
-                <li><a href="#">What is Stargardts?</a></li>
-                <li><a href="#">What to expect during a clinical trial?</a></li>
-                <li><a href="#">Glossary</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Assistive technology vendors & tools</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Inspiring story of Cesar</a></li>
-              </ul>
-            </li>
+            
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" id="a-dash-one" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-cogs" aria-hidden="true"></i>
 Tools <span class="caret"></span></a>
@@ -44,7 +32,7 @@ Tools <span class="caret"></span></a>
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Vitamin A Food Database</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">Take The Amsler Test</a></li>
+                <li><a href="/tools/amsler-test">Take The Amsler Test</a></li>
               </ul>
             </li>
             <li class="dropdown">
