--- a/views/users/sign_in.handlebars
+++ b/views/users/sign_in.handlebars
@@ -3,7 +3,7 @@
   <form id="sign-in-form" class="form-horizontal" action="/users/dashboard" method="POST">
   <h2>Login or Register with:</h2>
 
-          <a href="/auth/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a><br><br><br>
+          <a style="margin-left: 191px" href="/auth/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a><br><br><br>
     <div class="form-group">
       <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
       <div class="col-sm-10">
